# zcash-vote-app

./: CHANGELOG.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  release-please-config.json
.github/workflows/: build-android.yml  build-linux.yml  build-mac-uni.yml  build-mac.yml  build-win.yml
src/: App.tsx  BatchVote.tsx  Delegate.tsx  Election.tsx  History.tsx  Overview.tsx  Vote.tsx  VoteAck.tsx  VoteQueueContext.tsx  VoteQueuePanel.tsx  VoteWizard.tsx  WIP.tsx  main.tsx  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: address.rs  db.rs  decrypt.rs  download.rs  lib.rs  pir.rs  state.rs  trees.rs  validate.rs  vote.rs
